--- a/faqs.html
+++ b/faqs.html
@@ -41,7 +41,7 @@
 		<summary>¿En qué formato debería subir el archivo?</summary>
 		<p>Intenta que los archivos pesen lo menos posible.
 		<br><br>Formatos admitidos: .pdf, .doc, .docx, .xls, .xlsx,
-		.ods, .odt, .txt.	
+		.jpg, .jpeg, .txt.	
 		<br><br>Otros formatos también tienen la posibilidad de ser
 		<br>admitidos sujetos a la subjetividad de los moderadores
 		<br>mientras que cumplan con la regla de ser livianos.
