--- a/faqs.html
+++ b/faqs.html
@@ -32,9 +32,8 @@
 	</details><hr>
 	<br><details>
 		<summary>¿Cómo subo un archivo?</summary>
-		<p>ir a la sección <em><a href="subir.html">"Subir archivo"</a></em>
-		<br><br>Para conocer qué tipo de archivos tienen prioridad
-		<br>respecto a la velocidad con la que son aprobados,
+		<p>Ir a la sección <em><a href="subir.html">"Subir archivo"</a></em>
+		<br><br>Para conocer qué tipo de archivos pueden subirse,
 		<br>abrí la siguiente solapa</p>
 	</details><hr>
 	<br><details>
@@ -42,9 +41,9 @@
 		<p>Intenta que los archivos pesen lo menos posible.
 		<br><br>Formatos admitidos: .pdf, .doc, .docx, .xls, .xlsx,
 		.jpg, .jpeg, .txt.	
-		<br><br>Otros formatos también tienen la posibilidad de ser
-		<br>admitidos sujetos a la subjetividad de los moderadores
-		<br>mientras que cumplan con la regla de ser livianos.
+		<br><br>Envianos un<em><a href="contact.html"</a>mail</em>
+		<br>si querés que agreguemos otro tipo de formato que
+		<br>aún no esté siendo admitido por la página.
 		</p>
 	</details><hr>
 	<br><details>
