--- a/faqs.html
+++ b/faqs.html
@@ -41,7 +41,7 @@
 		<p>Intenta que los archivos pesen lo menos posible.
 		<br><br>Formatos admitidos: .pdf, .doc, .docx, .xls, .xlsx,
 		.jpg, .jpeg, .txt.	
-		<br><br>Envianos un<em><a href="contact.html"</a>mail</em>
+		<br><br>Envianos un <em><a href="contact.html">mail</a></em>
 		<br>si querés que agreguemos otro tipo de formato que
 		<br>aún no esté siendo admitido por la página.
 		</p>
