--- a/cmkt.html
+++ b/cmkt.html
@@ -22,47 +22,47 @@
 <li><a href="materias/mat80.html">Introducción a la Creatividad</a></li>
 <li><a href="materias/mat81.html">Tradiciones y Tendencias Culturales</a></li>
 <li><a href="materias/mat82.html">Historia de la Comunicación y el Marketing</a></li>
-<li><a href="materias/mat83.html">Taller de Expresión Oral</a></li>
+<li><a href="materias/mat83.html">🎙️Taller de Expresión Oral</a></li>
 <li><a href="materias/mat84.html">Herramientas Digitales de Diseño y Negocios</a></li>
-<li><a href="materias/mat85.html">Lengua y Comunicación</a></li>
-<li><a href="materias/mat86.html">Introducción al Marketing</a></li>
+<li><a href="materias/mat85.html">🎙️Lengua y Comunicación</a></li>
+<li><a href="materias/mat86.html">🔊Introducción al Marketing</a></li>
 <li><a href="materias/mat87.html">🎙️Comunicación 360</a></li>
-<li><a href="materias/mat88.html">Introducción a los Lenguajes Multimedia</a></li>
-<li><a href="materias/mat89.html">Lenguajes Multimedias y Mundos Virtuales</a></li>
+<li><a href="materias/mat88.html">🎙️Introducción a los Lenguajes Multimedia</a></li>
+<li><a href="materias/mat89.html">🎙️Lenguajes Multimedias y Mundos Virtuales</a></li>
     </ul>
 
     <h3>Segundo Año</h3>
       <ul>
-<li><a href="materias/mat90.html">Introducción a Álgebra y Análisis Matemático</a></li>
+<li><a href="materias/mat90.html">🔢Introducción a Álgebra y Análisis Matemático</a></li>
 <li><a href="materias/mat91.html">Imagen Corporativa</a></li>
 <li><a href="materias/mat92.html">Tecnologías e Innovación</a></li>
 <li><a href="materias/mat93.html">Historia y Análisis de Tendencias Socioculturales Latinoamericanas</a></li>
-<li><a href="materias/mat94.html">Teoría de la Comunicación</a></li>
-<li><a href="materias/mat95.html">Introducción a la Economía</a></li>
-<li><a href="materias/mat96.html">Investigación de Mercados</a></li>
+<li><a href="materias/mat94.html">🎙️Teoría de la Comunicación</a></li>
+<li><a href="materias/mat95.html">💰Introducción a la Economía</a></li>
+<li><a href="materias/mat96.html">🔊Investigación de Mercados</a></li>
 <li><a href="materias/mat97.html">Estrategia de Producto y Marca</a></li>
-<li><a href="materias/mat98.html">Marketing Audiovisual</a></li>
+<li><a href="materias/mat98.html">🔊Marketing Audiovisual</a></li>
       </ul>
 
         <h3>Tercer Año</h3>
         <ul>
-<li><a href="materias/mat99.html">Marketing de Servicios</a></li>
-<li><a href="materias/mat100.html">Comunicación Publicitaria</a></li>
-<li><a href="materias/mat101.html">Comunicación, Marketing e Información</a></li>
+<li><a href="materias/mat99.html">🔊Marketing de Servicios</a></li>
+<li><a href="materias/mat100.html">🎙️Comunicación Publicitaria</a></li>
+<li><a href="materias/mat101.html">🎙️Comunicación, Marketing e Información</a></li>
 <li><a href="materias/mat102.html">Análisis de Tendencias Socioculturales e Internacionales</a></li>
 <li><a href="materias/mat103.html">Gestión y Diseño de Negocios</a></li>
-<li><a href="materias/mat104.html">Marketing Metrics</a></li>
+<li><a href="materias/mat104.html">🔊Marketing Metrics</a></li>
         </ul>
 
       <h3>Cuarto Año</h3>
       <ul>
-<li><a href="materias/mat105.html">Dirección Comercial y Marketing</a></li>
+<li><a href="materias/mat105.html">🔊Dirección Comercial y Marketing</a></li>
 <li><a href="materias/mat106.html">Estrategia de Precios</a></li>
 <li><a href="materias/mat107.html">Digital Methodologies</a></li>
-<li><a href="materias/mat108.html">Comunicación para la Gestión del Cambio</a></li>
+<li><a href="materias/mat108.html">🎙️Comunicación para la Gestión del Cambio</a></li>
 <li><a href="materias/mat109.html">Marketing y Relaciones Públicas</a></li>
 <li><a href="materias/mat110.html">Gestión de Negocios en la Ind. de Contenidos</a></li>
-<li><a href="materias/mat111.html">Mkt. y Comunicación en las Organizaciones</a></li>
+<li><a href="materias/mat111.html">🎙️Mkt. y Comunicación en las Organizaciones</a></li>
 <li><a href="materias/mat112.html">Diseño de Experiencias Interactivas</a></li>
 <li><a href="materias/mat113.html">Marketing e Innovación Social</a></li>
       </ul>
