--- a/can.html
+++ b/can.html
@@ -23,8 +23,8 @@
 <li><a href="materias/mat3.html">👤Introd. a la Filosofía</a></li>
 <li><a href="materias/mat4.html">👤Antropología</a></li>
 <li><a href="materias/mat5.html">👤Historia del Pensamiento Económico y Social</a></li>
-<li><a href="materias/mat6.html">🧮Introd. a la Contabilidad</a></li>
-<li><a href="materias/mat7.html">🧮Contabilidad Básica</a></li>
+<li><a href="materias/mat6.html">📒Introd. a la Contabilidad</a></li>
+<li><a href="materias/mat7.html">📒Contabilidad Básica</a></li>
 <li><a href="materias/mat8.html">👁️Administración I</a></li>
 <li><a href="materias/mat9.html">👁️Administración II</a></li>
 <li><a href="materias/mat10.html">⚖️Derecho Público y Constitucional</a></li>
@@ -32,13 +32,14 @@
 
     <h3>Segundo Año</h3>
     <ul>
-      <li><a href="materias/mat12.html">🏦Matemática Financiera</a></li>
+<li><a href="materias/mat11.html">🔢Análisis Matemático II</a></li>
+<li><a href="materias/mat12.html">💹Matemática Financiera</a></li>
 <li><a href="materias/mat13.html">👤Teología</a></li>
 <li><a href="materias/mat14.html">💰Economía General</a></li>
 <li><a href="materias/mat15.html">💰Microeconomía</a></li>
-<li><a href="materias/mat16.html">🧮Estados Contables I</a></li>
-<li><a href="materias/mat46.html">🧮Estados Contables II</a></li>
-<li><a href="materias/mat17.html">Intr. a Business Intelligence</a></li>
+<li><a href="materias/mat16.html">📒Estados Contables I</a></li>
+<li><a href="materias/mat46.html">📒Estados Contables II</a></li>
+<li><a href="materias/mat17.html">🖥️Intr. a Business Intelligence</a></li>
 <li><a href="materias/mat18.html">👷‍♂️Comportamiento Humano</a></li>
 <li><a href="materias/mat19.html">⚖️Instituciones de Derecho Civil y Comercial</a></li>
 <li><a href="materias/mat20.html">⚖️Derecho Empresario</a></li>
@@ -50,10 +51,10 @@
 <li><a href="materias/mat22.html">🚛Métodos Cuantitativos</a></li>
 <li><a href="materias/mat23.html">👤Teología Moral</a></li>
 <li><a href="materias/mat24.html">💰Macroeconomía</a></li>
-<li><a href="materias/mat25.html">🏦Finanzas Corporativas</a></li>
-<li><a href="materias/mat26.html">🏦Finanzas de Mercado</a></li>
-<li><a href="materias/mat27.html">🧮Costos</a></li>
-<li><a href="materias/mat28.html">🧮Fundamentos de Tributación</a></li>
+<li><a href="materias/mat25.html">💹Finanzas Corporativas</a></li>
+<li><a href="materias/mat26.html">💹Finanzas de Mercado</a></li>
+<li><a href="materias/mat27.html">📒Costos</a></li>
+<li><a href="materias/mat28.html">📒Fundamentos de Tributación</a></li>
 <li><a href="materias/mat29.html">🔊Introd. a la Comercialización</a></li>
 <li><a href="materias/mat30.html">⚖️Sociedades</a></li>
     </ul>
@@ -63,8 +64,8 @@
 <li><a href="materias/mat59.html">🚜Mercados - Commodities</a></li>
 <li><a href="materias/mat60.html">🚜Política de Empresa</a></li>
 <li><a href="materias/mat61.html">🚜Comercio Internacional Agroindustrial</a></li>
-<li><a href="materias/mat62.html">🚜Operaciones Agroindustriales I</a></li>
-<li><a href="materias/mat63.html">🚜Operaciones Agroindustriales II</a></li>
+<li><a href="materias/mat62.html">🚛Operaciones Agroindustriales I</a></li>
+<li><a href="materias/mat63.html">🚛Operaciones Agroindustriales II</a></li>
 <li><a href="materias/mat64.html">🚜International Business</a></li>
 <li><a href="materias/mat65.html">🚜Futuros y Opciones</a></li>
 <li><a href="materias/mat66.html">🚜Cadenas de Valor</a></li>
