--- a/cmkt.html
+++ b/cmkt.html
@@ -19,11 +19,11 @@
     <h3>Primer Año</h3>
     <ul>
 <li><a href="materias/mat79.html">Diseño Estratégico</a></li>
-<li><a href="materias/mat80.html">Introducción a la Creatividad</a></li>
+<li><a href="materias/mat80.html">🎙️Introducción a la Creatividad</a></li>
 <li><a href="materias/mat81.html">Tradiciones y Tendencias Culturales</a></li>
 <li><a href="materias/mat82.html">Historia de la Comunicación y el Marketing</a></li>
 <li><a href="materias/mat83.html">🎙️Taller de Expresión Oral</a></li>
-<li><a href="materias/mat84.html">Herramientas Digitales de Diseño y Negocios</a></li>
+<li><a href="materias/mat84.html">🎙️Herramientas Digitales de Diseño y Negocios</a></li>
 <li><a href="materias/mat85.html">🎙️Lengua y Comunicación</a></li>
 <li><a href="materias/mat86.html">🔊Introducción al Marketing</a></li>
 <li><a href="materias/mat87.html">🎙️Comunicación 360</a></li>
