--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
 
 <footer id="footer1">
 </footer>
+<script>
+  // Comprueba si el usuario ya ingresó el PIN
+  if (!sessionStorage.getItem('authenticated')) {
+    window.location.href = 'login/login.html'; // Redirige a la página de login si no se ha autenticado
+  }
+</script>
 </body>
 
 	</body>
