--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Archivo Austral</title>
-  <link rel="shortcut icon" type="x-icon" href="archivumaustralis.png"
+  <link rel="shortcut icon" type="x-icon" href="aaicon.png"
 	<meta charset="utf-8"/>
 	<link rel='stylesheet' type='text/css' href="style.css">
 </head>
