--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Archivo Austral</title>
 	<meta charset="utf-8"/>
+	<link rel="shortcut icon" type="x-icon" href="aaicon.png"/>
 	<link rel='stylesheet' type='text/css' href="style.css">
 </head>
 
