--- a/donaciones.html
+++ b/donaciones.html
@@ -20,7 +20,10 @@
 	<br>- Ampliar la capacidad de almacenamiento si es necesario
 </p>
 <h3>Apreciamos mucho tu colaboración</h3>
-	<a href='https://cafecito.app/archivoaustral' rel='noopener' target='_blank'><img srcset='https://cdn.cafecito.app/imgs/buttons/button_5.png 1x, https://cdn.cafecito.app/imgs/buttons/button_5_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_5_3.75x.png 3.75x' src='https://cdn.cafecito.app/imgs/buttons/button_5.png' alt='Invitame un café en cafecito.app' /></a>
+<a href="https://link.mercadopago.com.ar/archivoaustral" target="_blank">
+	<button class="donation-button">
+		<img src="mp.png" alt="Donar con Mercado Pago">
+	</button>
 </body>
 
 </html>
