--- a/faqs.html
+++ b/faqs.html
@@ -28,7 +28,7 @@
 				<br>1. Elegí la carrera que estudiás
 				<br><br>2. Elegí la materia a la cual pertenece el archivo que estás buscando
 				<br><br>3. Seleccioná la categoría del archivo que buscás: Libro, Examen o Resumen
-				<br><br>4. Serás redirigido al Google Drive, donde estará el archivo que estabas buscando
+				<br><br>4. Serás redirigido a la carpeta donde estará el archivo que estabas buscando
 		</p>
 	</details><hr>
 	<br><details>
