--- a/login/login.html
+++ b/login/login.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Acceso con PIN</title>
+  <title>Archivo Austral</title>
+  <link rel="shortcut icon" type="x-icon" href="aaicon.png"/>
   <link rel='stylesheet' type='text/css' href="stylelogin.css">
 </head>
 <body>
