--- a/subir.html
+++ b/subir.html
@@ -552,5 +552,14 @@
     });
     </script>
     </div>
+
+    <div id="loading-screen" class="loading-screen">
+    <div class="loading-content">
+        <p>Subiendo archivo, por favor espere...</p>
+        <img src="loading-icon.gif" alt="Cargando..." /> <!-- Puedes usar un GIF o CSS para la animación -->
+    </div>
+</div>
+
+    <script src="loading.js"></script>
 </body>
 </html>
