--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 </div>
 </div>
 
+<footer>
+  <span class="animated-text">Próximamente - <strong>Fiesta Austral</strong> - Jueves 10.04.25</span>
+</footer>
+	
 <footer id="footer1">
 </footer>
 <script>
