--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 </div>
 </div>
 
-<footer>
-  <span class="animated-text">Próximamente - <strong>Fiesta Austral</strong> - Jueves 10.04.25</span>
-</footer>
+// <footer>
+//  <span class="animated-text">Próximamente - <strong>Fiesta Austral</strong> - Jueves 10.04.25</span>
+// </footer>
 	
 <footer id="footer1">
 </footer>
