--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 </div>
 </div>
 
-// <footer>
-//  <span class="animated-text">Próximamente - <strong>Fiesta Austral</strong> - Jueves 10.04.25</span>
-// </footer>
+<!-- <footer>
+  <span class="animated-text">Próximamente - <strong>Fiesta Austral</strong> - Jueves 10.04.25</span>
+ </footer>
 	
-// <footer id="footer1">
-// </footer>
+ <footer id="footer1">
+ </footer> -->
 <script>
- // if (!sessionStorage.getItem('authenticated')) {
- //   window.location.href = 'login/login.html'; // Redirige a la página de login si no se ha autenticado
-//  }
+//  if (!sessionStorage.getItem('authenticated')) {
+  //  window.location.href = 'login/login.html'; // Redirige a la página de login si no se ha autenticado
+  }
 </script>
 </body>
 
